feat: change html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,60 @@
     <title>HTML, CSS &amp; Git Basics</title>
 </head>
 <body>
-    <h1>start</h1>
-    <p>Lorem <span class="test_span">ipsum dolor</span> sit amet consectetur adipisicing elit. Voluptatibus perferendis architecto accusantium provident delectus tempore in explicabo dolorem tempora sed, laboriosam consectetur placeat, recusandae corrupti magnam laudantium quos? Itaque, mollitia?</p>
+    <div class="wrapper">
+        <header class="header-cv">
+            <nav></nav>
+        </header>
+        <main class="main-cv">
+            <h1>General information</h1>
+            <figure>
+                <img src="./img/img_main_01.jpeg" alt="my_photo">
+                <figcaption>Maksim Kazlouski</figcaption>
+            </figure>
+
+            <div class="contacts">
+                <details>
+                    <summary>Contacts</summary>
+                    <p>Phone: 595081871</p>
+                    <p>E-mail: messewalter@gmail.com</p>
+                    <p>Git: [GitHub](https://github.com/iDevorei "GitHub")</p>
+                    <p>Telegram: @iDevore</p>
+                    <p>Discord (rs-school server): Максим Козловский (@iDevorei)</p>
+                </details>
+            </div>
+
+            <h2>About myself</h2>
+            <p>My goal is to become a good front-end developer. I've been going to this goal for a very long time. I don't want to stop.</p>
+            <h2>Skills</h2>
+            <ol>
+                <li>HTML (in process)</li>
+                <li>CSS (in process)</li>
+                <li>Git (in process)</li>
+                <li>JavaScript (in process)</li>
+            </ol>
+
+            <h3>Example</h3>
+            <pre>
+                <code>
+                    function multiply(a, b){
+                        return a * b
+                      }
+                      
+                      multiply();
+                </code>
+            </pre>
+
+            <h2>projects</h2>
+            <p>[CV](https://github.com/iDevorei/rsschool-cv/blob/gh-pages/cv.md "CV")</p>
+
+            <h2>Education</h2>
+            <p>The Belarusian State University of Culture and Arts</p>
+
+            <h2>English level</h2>
+            <p>A2</p>
+            <p>https://examinator.epam.com/Main/PersonalAssignments</p>
+        </main>
+        <footer class="footer-cv"></footer>
+    </div>
 </body>
 </html>
