--- a/index.html
+++ b/index.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML, CSS &amp; Git Basics</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <div class="wrapper">
         <header class="header-cv">
-            <nav></nav>
+            <nav class="nav-menu">
+                <div>General information</div>
+                <div>Contacts</div>
+                <div>About myself</div>
+                <div>Skills</div>
+                <div>Example</div>
+                <div>Education</div>
+            </nav>
         </header>
         <main class="main-cv">
-            <h1>General information</h1>
-            <figure>
-                <img src="./img/img_main_01.jpeg" alt="my_photo">
-                <figcaption>Maksim Kazlouski</figcaption>
-            </figure>
+            <div class="general">
+                <h1>General information</h1>
+                <figure class="photo">
+                    <img src="./img/img_main_01.jpeg" alt="my_photo">
+                    <figcaption>Maksim Kazlouski</figcaption>
+                </figure>
+            </div>
 
             <div class="contacts">
                 <details>
@@ -29,7 +39,8 @@
             </div>
 
             <h2>About myself</h2>
-            <p>My goal is to become a good front-end developer. I've been going to this goal for a very long time. I don't want to stop.</p>
+            <p>My goal is to become a good front-end developer. I've been going to this goal for a very long time. I don't want to stop. I am a person who wants to change the nature of his work and become a front-end developer. My skills are not very high at the moment, but I try to study the material in the way that is available to me.</p>
+
             <h2>Skills</h2>
             <ol>
                 <li>HTML (in process)</li>
@@ -52,10 +63,8 @@
             <h2>projects</h2>
             <p>[CV](https://github.com/iDevorei/rsschool-cv/blob/gh-pages/cv.md "CV")</p>
 
-            <h2>Education</h2>
+            <h2>Education and English level</h2>
             <p>The Belarusian State University of Culture and Arts</p>
-
-            <h2>English level</h2>
             <p>A2</p>
             <p>https://examinator.epam.com/Main/PersonalAssignments</p>
         </main>
